# design_pattern

./: CMakeLists.txt
include/: SingleInstance.h  Singleton.h  concrete_flyweight.h  factory.h  flyweight.h  flyweight_factory.h
notes/: adapter_pattern.md  design_pattern.md  factory.md  flyweight_pattern.md  singleton_notes.md
src/: Singleton.cpp  abstract_factory.cpp  class_adapter.cpp  concrete_flyweight.cpp  flyweight_factory.cpp  main.cpp  method_factory.cpp  object_adapter.cpp  register_sigleton_factory.cpp  simple_factory.cpp  template_factory.cpp
